--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,6 +38,7 @@
 @import 'modules/_buttons.scss';
 @import 'modules/_forms.scss';
 @import 'modules/_modals.scss';
+@import 'modules/_landing_subnav.scss';
 @import 'modules/_circle.scss';
 @import 'modules/_property_tiles.scss';
 @import 'modules/_insight_tile.scss';
