--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -15,7 +15,7 @@
 					<figcaption>
 						<h4>Our Story</h4>
 						<p>Our history is as rich as our expertise is deep.</p>
-						<span class="sub-title">SEE OUR STORY ></span>
+						<p class="sub-title">SEE OUR STORY ></p>
 					</figcaption>
 				</figure>
 				</a>
@@ -27,7 +27,7 @@
 						<figcaption>
 							<h4>Search Listings</h4>
 							<p>Search New York City’s most in-demand townhouses and small buildings.</p>
-							<span class="sub-title">SEE THE PROPERTIES ></span>							
+							<p class="sub-title">SEE THE PROPERTIES ></p>							
 						</figcaption>
 					</figure>
 				</a>
@@ -39,7 +39,7 @@
 						<figcaption>
 							<h4>Looking to Sell?</h4>
 							<p>Find out why working with Garfield makes all the difference.</p>
-							<span class="sub-title">GET A VALUATION ></span>
+							<p class="sub-title">GET A VALUATION ></p>
 						</figcaption>
 					</figure>
 				</a>
@@ -51,7 +51,7 @@
 						<figcaption>
 							<h4>Our Neighborhoods</h4>
 							<p>The numbers behind NYC’s most prominent neighborhoods.</p>
-							<span class="sub-title">BROWSE THE NEIGHBORHOODS ></span>
+							<p class="sub-title">BROWSE THE NEIGHBORHOODS ></p>
 						</figcaption>
 					</figure>
 				</a>
