--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -169,11 +169,14 @@
 		padding-bottom: 10px;
 		display: block;
 		color: white;
+		border-radius: 0;
 		margin: 0;
 		text-align: center;
 		margin-bottom: 30px;
+		text-transform: uppercase;
 		&:hover {
 			background-color: $hover-green;
+			color: white;
 		}
 	}
 }
