added powder rooms and reduced individual property pages to 60px padding

--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -1,4 +1,4 @@
-<section class="leading property-page background-gray">
+<section class="leading properties property-page background-gray">
 	<div class="container">
 
 		<aside>
@@ -101,6 +101,10 @@
 							<li>Lease Terms</li>
 							{{ endif }}
 
+							{{ if build_date|not_empty }}
+							<li>Build Date</li>
+							{{ endif }}
+
 							{{ if plot|not_empty }}
 							<li>Plot</li>
 							{{ endif }}
@@ -129,6 +133,10 @@
 							<li>Bathrooms</li>
 							{{ endif }}
 
+							{{ if powder|not_empty }}
+							<li>Powder Rooms</li>
+							{{ endif }}
+
 							{{ if pet_policy|not_empty }}
 							<li>Pet Policy</li>
 							{{ endif }}
@@ -154,6 +162,11 @@
 							{{ if price|not_empty }}
 							<li>${{ price|format_number }}/month</li>
 							{{ endif }}
+
+							{{ if build_date|not_empty }}
+							<li>{{ build_date }}</li>
+							{{ endif }}
+
 							{{ if plot|not_empty }}
 							<li>{{ plot }}</li>
 							{{ endif }}
@@ -180,6 +193,10 @@
 
 							{{ if bathrooms|not_empty }}
 							<li>{{ bathrooms }}</li>
+							{{ endif }}
+
+							{{ if powder|not_empty }}
+							<li>{{ powder }}</li>
 							{{ endif }}
 
 							{{ if pet_policy|not_empty }}
