--- a/src/scss/components/_green_specs.scss
+++ b/src/scss/components/_green_specs.scss
@@ -2,7 +2,7 @@
 		margin-top: 30px;
 		padding: 60px;
 		background-color: $lightest-green;
-		@include span(full);
+		@include clearfix;
 		* {
 			color: $text-green;
 		}
