--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 // Helpers & Frameworks
 
 // @import url("http://fonts.googleapis.com/css?family=Nunito:400,300,700");
-@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
+// @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
 @import '../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap_custom.scss';
 @import '../../bower_components/normalize.css/normalize';
 @import '../../bower_components/susy/sass/susy';
@@ -30,6 +30,7 @@
 @import 'components/_section_styles.scss';
 @import 'components/_property_nav.scss';
 @import 'components/_property_individual.scss';
+@import 'components/_agent_individual.scss';
 @import 'components/_green_specs.scss';
 @import 'components/_slick_overides.scss';
 
@@ -42,6 +43,7 @@
 @import 'modules/_circle.scss';
 @import 'modules/_property_tiles.scss';
 @import 'modules/_insight_tile.scss';
+@import 'modules/_agents_tile.scss';
 
 // pages
 // @import 'pages/_landing.scss';
