--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4951,11 +4951,10 @@ section.leading {
 
 .green-specs .specs {
   box-sizing: border-box;
-  width: 41.66667%;
+  width: 50%;
   float: left;
   padding-left: 0.83333%;
-  padding-right: 0.83333%;
-  margin-left: 8.33333%; }
+  padding-right: 0.83333%; }
 
 .green-specs .specs ul {
   box-sizing: border-box;
