--- a/src/scss/components/_green_specs.scss
+++ b/src/scss/components/_green_specs.scss
@@ -1,7 +1,7 @@
 	.green-specs {
-		margin-top: 30px;
 		padding: 60px;
 		background-color: $lightest-green;
+		@include span(full no-gutter);
 		@include clearfix;
 		* {
 			color: $text-green;
