--- a/src/scss/modules/_agents_tile.scss
+++ b/src/scss/modules/_agents_tile.scss
@@ -19,7 +19,7 @@ $agents: (
 		font-size: 27px;
 	}
 	img {
-		border: 1px solid transparent;
+		border: 2px solid transparent;
 	}
 	a:first-of-type {
 		display: block;
@@ -49,9 +49,12 @@ $agents: (
 		* {
 			vertical-align: middle;
 		}
+		img {
+			max-width: 200px;
+		}
 		svg {
-			width: 30px;
-			height: 30px;
+			width: 25px;
+			height: 25px;
 			margin: 0;
 		}
 		p {
