agent style changes via James / Trell

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -76,6 +76,10 @@ img {
   background-color: $similar-properties-gray;
 }
 
+.agents-background {
+  background-color: $agents-background;
+}
+
 .white {
   background-color: #fff;
 }
