--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -59,6 +59,7 @@ $background-gray: #F2F2F2;
 $background-light-gray: #F7F7F7;
 $header-font-color: #25282A;
 $light-font-color: #A7A4A4;
+$agents-background: #F5F5F5;
 $insights: #F4FBF9;
 $red: #FF0000;
 $modal-text: #CCCCCC;
