--- a/statamic/_themes/main/templates/agents.html
+++ b/statamic/_themes/main/templates/agents.html
@@ -1,4 +1,4 @@
-<section class="leading agents">
+<section class="leading agents agents-background">
 	<div class="container centered">
 <h1>Our Team</h1>
 <h2>In-depth real estate knowledge. Neighborhood focus &amp; expertise. A clear commitment to your goals. An entire company as your team. We are Garfield.</h2>
