--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4217,7 +4217,7 @@ header {
   height: 78px;
   background-color: #fff;
   z-index: 100;
-  border-bottom: 1px solid #25282A;
+  border-bottom: 1px solid lightgray;
   width: 100%; }
 
 header.nav-down {
@@ -5322,7 +5322,7 @@ section.leading {
   margin: 0; }
 
 .landing-sub-nav svg {
-  transition: all 500ms ease;
+  transition: all 750ms ease;
   margin-bottom: 20px; }
 
 .landing-sub-nav svg * {
