smaller green specs padding

--- a/src/scss/components/_green_specs.scss
+++ b/src/scss/components/_green_specs.scss
@@ -3,6 +3,9 @@
 		background-color: $lightest-green;
 		@include span(full no-gutter);
 		@include clearfix;
+		h4 {
+			margin-top: 0;
+		}
 		* {
 			color: $text-green;
 		}
