changed Key Features to be capped

--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -226,7 +226,7 @@
 						<ul>
 							<li>{{ location_granular }}</li>
 						</ul>
-						<h3>{{ theme:partial src="svg/stars" }}Key Features</h3>
+						<h3>{{ theme:partial src="svg/stars" }}KEY FEATURES</h3>
 						<ul>
 							{{ key_features }}
 							<li>{{ value }}</li>
