--- a/src/scss/components/_agent_individual.scss
+++ b/src/scss/components/_agent_individual.scss
@@ -3,14 +3,18 @@
 		padding-right: 60px;
 		img {
 			margin-top: 183px;
+			max-width: 200px;
+			text-align: center;
+			margin-left: auto;
+			margin-right: auto;
 		}
 		h2 {
 			font-family: $header-font-bold;
-			font-size: 25px;
+			font-size: 22px;
 		}
 		svg {
-			height: 30px;
-			width: 30px;
+			height: 25px;
+			width: 25px;
 			margin-right: 10px;
 		}
 		svg, li {
