--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -16,19 +16,22 @@
 	background-color: #fff;
 	.preview-image {
 		height: 300px;
-		width: 200px;
+		min-width: 200px;
+		max-width: 200px;
+		// width: 180px;
 		background-color: $light-gray;
 		background-size: cover;
+		text-align: center;
+		// margin-left: auto;
+		// margin-right: auto;
 	}
 	.sqft {
 		margin-right: 5px;
 	}
 	img {
 		max-height: 300px;
-		max-width: 200px;
-
+		max-width: 100%;
 	}
-
 	.property_tile_info {
 		display: flex;
 		flex-flow: column nowrap;
