--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -20,7 +20,7 @@
 		max-width: 200px;
 		// width: 180px;
 		background-color: $light-gray;
-		background-size: cover;
+		background-size: contain;
 		text-align: center;
 		// margin-left: auto;
 		// margin-right: auto;
